python-files folder and new_get_passes.py
also adding notes for June 15th

--- a/jupyter_notebooks/get_passes_rewrites.ipynb
+++ b/jupyter_notebooks/get_passes_rewrites.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,6 @@
     "import ephem\n",
     "import math\n",
     "from datetime import timedelta\n",
-    "from datetime import datetime\n",
     "\n",
     "\n",
     "# get_passes() function definition\n",
@@ -230,20 +229,29 @@
     "    sat = ephem.readtle(tle_line0, tle_line1, tle_line2)\n",
     "\n",
     "    contacts = []\n",
-    "    \n",
-    "    if duration is None:\n",
+    "\n",
+    "    if duration is None and num_passes is None:\n",
     "        # get passes for next 24 hrs\n",
     "        duration = 24\n",
+    "        # set num_passes > max passes possible in duration.\n",
+    "        # duration is in hours, so 4 per hour is large\n",
+    "        # enough for duration to break out of loop.\n",
+    "        num_passes = 4 * int(duration)\n",
+    "        # set end_time longer than suggested length for tle's\n",
     "        end_time = ephem.date(ground_station.date+5*365)\n",
-    "    if num_passes is None:\n",
-    "        # num_passes > max passes possible in duration.\n",
+    "    if duration is not None and num_passes is None:\n",
+    "        # set num_passes > max passes possible in duration.\n",
     "        # duration is in hours, so 4 per hour is large\n",
     "        # enough for duration to break out of loop.\n",
     "        num_passes = 4 * int(duration)\n",
     "        end_time = ephem.date(ground_station.date+duration*ephem.hour)\n",
+    "    if duration is None and num_passes is not None:\n",
+    "        # set end_time longer than suggested length for tle's\n",
+    "        end_time = ephem.date(ground_station.date+5*365)\n",
     "    if num_passes is not None and duration is not None:\n",
+    "        # if both are given, use minimum\n",
     "        end_time = ephem.date(ground_station.date+duration*ephem.hour)\n",
-    "    \n",
+    "\n",
     "    try:\n",
     "        for i in range(num_passes):\n",
     "            if ground_station.date > end_time:\n",
@@ -255,14 +263,14 @@
     "            info = ground_station.next_pass(sat)\n",
     "            rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
     "            deg_per_rad = 180.0/math.pi           # use to conv azimuth to deg\n",
-    "            pass_duration = timedelta(days = set_time-rise_time)  # fraction of a day\n",
+    "            pass_duration = timedelta(days=set_time-rise_time)  # timedelta\n",
     "\n",
     "            pass_data = {\n",
-    "                'start' : rise_time.datetime().ctime(),\n",
-    "                'end' : set_time.datetime().ctime(),\n",
-    "                'duration' : str(pass_duration),\n",
-    "                'rise_az' : (rise_az*deg_per_rad),\n",
-    "                'set_az' : (set_az*deg_per_rad)\n",
+    "                'start': rise_time.datetime().ctime(),\n",
+    "                'end': set_time.datetime().ctime(),\n",
+    "                'duration': str(pass_duration),\n",
+    "                'rise_az': (rise_az*deg_per_rad),\n",
+    "                'set_az': (set_az*deg_per_rad)\n",
     "            }\n",
     "\n",
     "            if set_time > rise_time:  # only update if set time > rise time\n",
@@ -274,12 +282,12 @@
     "    except ValueError:\n",
     "        # No (more) visible passes\n",
     "        pass\n",
-    "    return contacts"
+    "    return contacts\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -305,8 +313,8 @@
     "\n",
     "vu = ['Valparaiso University', '41.4639', '-87.0439', 245.089]\n",
     "start_time = '2017/6/14 15:00:00'\n",
-    "num_passes = 5\n",
-    "duration = 24\n",
+    "num_passes = 50\n",
+    "duration = None\n",
     "vu_passes = {}\n",
     "new_vu_passes = {}\n",
     "\n",
@@ -320,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -332,7 +340,7 @@
        "True"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 62,
      "metadata": {
      },
      "output_type": "execute_result"
