Initial plotting of access time

--- a/jupyter_notebooks/get_passes_rewrites.ipynb
+++ b/jupyter_notebooks/get_passes_rewrites.ipynb
@@ -275,7 +275,8 @@
     "\n",
     "            if set_time > rise_time:  # only update if set time > rise time\n",
     "                ground_station.date = set_time  # new obs time = prev set time\n",
-    "                contacts.append(pass_data)\n",
+    "                if ground_station.date <= end_time:\n",
+    "                    contacts.append(pass_data)\n",
     "\n",
     "            # increase by 1 min and look for next pass\n",
     "            ground_station.date = ground_station.date + ephem.minute\n",
