--- a/notes/2017-06-15.md
+++ b/notes/2017-06-15.md
@@ -3,3 +3,6 @@ continued updating/pairing down new_get_passes.
 created python-files folder 
 - moved get_passes.py
 - created new_get_passes.py
+
+
+initial plotting of access time in s
