Notes for June 15th and 16th

--- a/notes/2017-06-15.md
+++ b/notes/2017-06-15.md
@@ -5,4 +5,6 @@ created python-files folder
 - created new_get_passes.py
 
 
-initial plotting of access time in s
+initial plotting of access time in scheduling-questions-I notebook
+- seems to be periodic like U of M's
+- plotted for a whole year which took about 20 min to compute data
