--- a/notes/2017-06-20.md
+++ b/notes/2017-06-20.md
@@ -10,4 +10,7 @@ created notebook scheduling-module to test all of my functions and classes
         - calc_access_time()
         - plot_access_time()
     - currently located in jupyter_notebooks folder
+---
+created notebook scheduling-questions-II to begin process of iterating over all gs and sat combinations
 
+ran it overnight, took 3.5 hours
