--- a/jupyter_notebooks/scheduling-questions-I.ipynb
+++ b/jupyter_notebooks/scheduling-questions-I.ipynb
@@ -52,7 +52,7 @@
     "    ground_station.name = obs_name                # name string\n",
     "    ground_station.lon = obs_lon                  # in degrees (+E)\n",
     "    ground_station.lat = obs_lat                  # in degrees (+N)\n",
-    "    ground_station.elevation = obs_alt            # in meters\n",
+    "    ground_station.elevation = int(obs_alt)       # in meters\n",
     "    ground_station.date = ephem.date(start_time)  # in UTC\n",
     "\n",
     "    # Read in most recent satellite TLE data\n",
@@ -3306,6 +3306,53 @@
    "source": [
     "for i in g:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+    "from itertools import islice\n",
+    "stations = []\n",
+    "with open('groundstations.txt') as f:\n",
+    "    while True:\n",
+    "        #an iterator that returns the next N lines and stops\n",
+    "        fourline = islice(f, 4)\n",
+    "        #loop over these N lines, removing trailing spaces and \\n\n",
+    "        gs = [x.rstrip() for x in fourline]\n",
+    "\n",
+    "        #only accept complete data\n",
+    "        #the end of the file *should* have len(tle)==0 but\n",
+    "        #this also handles extra junk at the end\n",
+    "        if len(gs) == 4:\n",
+    "            stations.append(gs)\n",
+    "        else:\n",
+    "            break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Corey Shields', '39.236', '-86.305', '280'], ['Valparaiso University', '41.4639', '-87.0439', '245.089']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(stations)"
    ]
   }
  ],
