Save current work in notebooks and notes.

--- a/jupyter_notebooks/scheduling-questions-II.ipynb
+++ b/jupyter_notebooks/scheduling-questions-II.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -67,12 +67,23 @@
    "outputs": [
    ],
    "source": [
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
     "pickle.dump(passes, open('passes.pkl','wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -84,6 +95,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1036"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {
+     },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(new_passes)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "collapsed": false
@@ -91,7 +126,19 @@
    "outputs": [
    ],
    "source": [
-    "print(new_passes)"
+    "stations = schedulingbazaar.get_gs('groundstations.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+    "ret"
    ]
   }
  ],
