--- a/notes/2017-06-21.md
+++ b/notes/2017-06-21.md
@@ -1,3 +1,15 @@
 after running overnight, came back this morning to pickle data first thing
 - cocalc restarted notebook in the process and I have to rerun it 
 
+Reran notebook
+- took 12400.152 seconds
+    - about 12s per pair
+- yeilded 1036 tuple keys in the dict
+    - 74 sats x 14 gs
+    
+
+_to do_
+---
+- update get_gs() from suggestion in slack
+- wrap current code with contacts function
+- find out how long get_passes() takes
