Add horizon to get_passes()
Add horizon to get_passes() to allow for explicit specification.
Pyephem default is 0, and now so is get_passes().
Horizon allows us to specify a degree value to only find next "visible"
passes.

--- a/jupyter_notebooks/overlap-function-test.ipynb
+++ b/jupyter_notebooks/overlap-function-test.ipynb
@@ -108,14 +108,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
    ],
    "source": [
-    "import intervaltree"
+    "import intervaltree as iv\n",
+    "import datetime"
    ]
   },
   {
@@ -152,14 +153,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Interval(0, 12, 'foo'), Interval(6, 18, 'fooagain')]\n",
+      "{Interval(6, 18, 'fooagain'), Interval(0, 12, 'foo')}\n"
+     ]
+    }
    ],
    "source": [
-    "import ephem"
+    "begin = 0\n",
+    "#datetime.datetime(2017, 6, 29, 0, 0, 0)\n",
+    "end = 12\n",
+    "#datetime.datetime(2017, 6, 29, 12, 0, 0)\n",
+    "data = 'foo'\n",
+    "\n",
+    "beginagain = 6\n",
+    "#datetime.datetime(2017, 6, 29, 6, 0, 0)\n",
+    "endagain = 18\n",
+    "#datetime.datetime(2017, 6, 29, 18, 0, 0)\n",
+    "dataagain = 'fooagain'\n",
+    "\n",
+    "tree = iv.IntervalTree()\n",
+    "tree.addi(begin, end, data)\n",
+    "tree.addi(beginagain, endagain, dataagain)\n",
+    "\n",
+    "print(sorted(tree[8]))\n",
+    "print(tree.search(5,10))"
    ]
   },
   {
