Notes and beginning overlap test
Large commit due to inability to push things to github.
Includes notes from June 28 - July 11

--- a/jupyter_notebooks/overlap-function-test-1.ipynb
+++ b/jupyter_notebooks/overlap-function-test-1.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 0,
    "metadata": {
     "collapsed": false
    },
@@ -91,30 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 0,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1429362\n"
-     ]
-    }
    ],
    "source": [
     "N = 0\n",
-    "for key, value in passes_new.items():\n",
+    "for key, value in passes_all.items():\n",
     "    N += len(value)\n",
     "print(N)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -141,31 +134,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IntervalTree([Interval(datetime.datetime(2017, 6, 29, 0, 0), datetime.datetime(2017, 6, 29, 12, 0), 'a'), Interval(datetime.datetime(2017, 6, 29, 6, 0), datetime.datetime(2017, 6, 29, 18, 0), 'b')])\n",
+      "IntervalTree([Interval(datetime.datetime(2017, 6, 29, 0, 0), datetime.datetime(2017, 6, 29, 6, 0), 'a'), Interval(datetime.datetime(2017, 6, 29, 6, 0), datetime.datetime(2017, 6, 29, 12, 0), 'a'), Interval(datetime.datetime(2017, 6, 29, 6, 0), datetime.datetime(2017, 6, 29, 12, 0), 'b'), Interval(datetime.datetime(2017, 6, 29, 12, 0), datetime.datetime(2017, 6, 29, 18, 0), 'b')])\n"
+     ]
+    }
    ],
    "source": [
-    "begin = 0\n",
-    "#datetime.datetime(2017, 6, 29, 0, 0, 0)\n",
-    "end = 12\n",
-    "#datetime.datetime(2017, 6, 29, 12, 0, 0)\n",
-    "data = 'foo'\n",
+    "begin = datetime.datetime(2017, 6, 29, 0, 0, 0)\n",
+    "end = datetime.datetime(2017, 6, 29, 12, 0, 0)\n",
+    "data = 'a'\n",
     "\n",
-    "beginagain = 6\n",
-    "#datetime.datetime(2017, 6, 29, 6, 0, 0)\n",
-    "endagain = 18\n",
-    "#datetime.datetime(2017, 6, 29, 18, 0, 0)\n",
-    "dataagain = 'fooagain'\n",
+    "beginagain = datetime.datetime(2017, 6, 29, 6, 0, 0)\n",
+    "endagain = datetime.datetime(2017, 6, 29, 18, 0, 0)\n",
+    "dataagain = 'b'\n",
     "\n",
     "tree = iv.IntervalTree()\n",
     "tree.addi(begin, end, data)\n",
     "tree.addi(beginagain, endagain, dataagain)\n",
     "\n",
-    "print(sorted(tree[8]))\n",
-    "print(tree.search(5,10))"
+    "\n",
+    "#print(sorted(tree[8]))\n",
+    "#print(tree.search(datetime.datetime(2017, 6, 29, 2, 0, 0), datetime.datetime(2017, 6, 29, 7, 0, 0)))\n",
+    "\n",
+    "#print(tree[datetime.datetime(2017, 6, 29, 2, 0, 0) : datetime.datetime(2017, 6, 29, 7, 0, 0)])\n",
+    "\n",
+    "#tree.intersection(tree) == tree\n",
+    "print(tree)\n",
+    "tree.split_overlaps()\n",
+    "print(tree)"
    ]
   },
   {
