--- a/notes/2017-06-28.md
+++ b/notes/2017-06-28.md
@@ -10,3 +10,5 @@ interval tree:
 - https://pypi.python.org/pypi/intervaltree
 - https://github.com/chaimleib/intervaltree/blob/master/intervaltree/intervaltree.py
 
+permission denied to github. will resolve asap...
+
