Filters test notebook
Added notebook to begin writing filters.
Created new folder for original python files.

--- a/notes/2017-07-11.md
+++ b/notes/2017-07-11.md
@@ -3,6 +3,6 @@ _working from home today_
 goal for today:
 - create working filters for current bag of data
 - work on presentation
-- fix github commit problem
+- [done?] fix github commit problem
 
 ---
