--- a/notes/2017-07-11.md
+++ b/notes/2017-07-11.md
@@ -6,3 +6,11 @@ goal for today:
 - [done?] fix github commit problem
 
 ---
+in filters-notebook.ipynb:
+- datetime.datetime.timestamp is much bigger than I thought (which in hindsight makes sense)
+- July 11, 2017 about 11:00 am --> 1499789151.60831
+
+finished file filters.py
+- pep8 compliant
+- includes: passes_per_gs(), passes_per_sat(), passes_gs_sat()
+
