Notes for week of July 11

--- a/notes/2017-07-11.md
+++ b/notes/2017-07-11.md
@@ -3,7 +3,7 @@ _working from home today_
 goal for today:
 - create working filters for current bag of data
 - work on presentation
-- [done?] fix github commit problem
+- [done] fix github commit problem
 
 ---
 in filters-notebook.ipynb:
@@ -14,3 +14,5 @@ finished file filters.py
 - pep8 compliant
 - includes: passes_per_gs(), passes_per_sat(), passes_gs_sat()
 
+in analysis-notebook.ipynb:
+- will use first pass start as start time and last pass end as end time
