Update notes for end of day

--- a/notes/2017-08-01.md
+++ b/notes/2017-08-01.md
@@ -3,3 +3,9 @@
 _to do_ 
 ---
 - create line plots showing which sats are in view of which ground stations and vice versa. 
+
+progress
+---
+- created schedulers.py and added a random_scheduler
+- created simulate.py to act as new test-client
+- caught up on commit messages
