convert to properties

--- a/jupyter_notebooks/line-plot.ipynb
+++ b/jupyter_notebooks/line-plot.ipynb
@@ -104,8 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = vu.calendar_begin()\n",
-    "z = vu.calendar_end()"
+    "x = vu.calendar_begin\n",
+    "z = vu.calendar_end"
    ]
   },
   {
